test2-2023-07-05.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 1.0448 seconds

  ----Wall Time----  ----Name----
    1.0435 ( 99.9%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    0.9831 ( 94.1%)    Parse modules
    0.0014 (  0.1%)  Rest
    1.0448 (100.0%)  Total

{
  totalTime: 1.056,
  maxMemory: 171700224
}
